kubernetes/apps/seerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: seerr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
      sectionName: websecure
  hostnames:
    - seerr.sample.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seerr
          port: 5055
